refactoring of code.  added clean up of temporary ingestion files
